adds the sidebar icons

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,5 +1,25 @@
 <div class="chat">
-    <div class="chat__wrapper">
-        <h4>Hello World</h4>
-    </div>
+  <div class="chat__wrapper">
+    <h4>Hello World</h4>
+  </div>
+  <aside class="chat__sidebar">
+    <ul class="chat__icons">
+      <a>
+        <img
+          class="chat__icon"
+          title="Profile page"
+          src="/assets/user.svg"
+          alt="Chat Button Icon"
+        />
+      </a>
+      <a>
+        <img
+          class="chat__icon"
+          title="Logout"
+          src="/assets/logout.svg"
+          alt="Chat Button Icon"
+        />
+      </a>
+    </ul>
+  </aside>
 </div>
