--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,14 +1,47 @@
 .chat {
-    display: grid;
-    place-items: center;
-    width: 100vw;
-    height: 100vh;
+  display: grid;
+  place-items: center;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 }
 
 .chat__wrapper {
-    width: 80%;
-    height: 80%;
-    background: white;
-    box-shadow: 0 0 5px 0 rgb(0 0 0 / 5%), 0 5px 5px 0 rgb(0 0 0 / 15%);
+  width: 80%;
+  height: 80%;
+  background: white;
+  box-shadow: 0 0 5px 0 rgb(0 0 0 / 5%), 0 5px 5px 0 rgb(0 0 0 / 15%);
 }
 
+.chat__sidebar {
+  position: fixed;
+  top: calc(100vh - 50%);
+}
+
+.chat__sidebar > ul {
+  list-style: none;
+  padding: 0;
+  margin-left: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat__icons > a {
+  margin: 5px 0;
+  opacity: 0.5;
+}
+
+.chat__icons > a:hover {
+  transition: all 0.3s ease-in-out;
+  opacity: 1;
+}
+
+.chat__icon {
+  width: 30px;
+  cursor: pointer;
+}
+
+.chat__icon:hover {
+  transform: scale(1.3);
+  transition: all 0.3s ease-in-out;
+}
