sets up the configuration file

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -12,7 +12,7 @@
           alt="Chat Button Icon"
         />
       </a>
-      <a>
+      <a [routerLink]="['login']">
         <img
           class="chat__icon"
           title="Logout"
