--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -53,6 +53,9 @@
         <p class="message">
           Already registered? <a [routerLink]="['/login']">Sign In</a>
         </p>
+        <p class="message">
+          Sign Up using <a [routerLink]="['/login']">Google</a>
+        </p>
       </form>
     </div>
   </div>
