setup routings for the profile component

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -4,7 +4,7 @@
   </div>
   <aside class="chat__sidebar">
     <ul class="chat__icons">
-      <a>
+      <a [routerLink]="['profile']">
         <img
           class="chat__icon"
           title="Profile page"
