Adds the sign out functionality

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -12,7 +12,7 @@
           alt="Chat Button Icon"
         />
       </a>
-      <a [routerLink]="['login']">
+      <a (click)="logOut()">
         <img
           class="chat__icon"
           title="Logout"
