experiencing error with the comet chat UI Kit

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div class="chat">
-  <div class="chat__wrapper">
-    <h4>Hello World</h4>
+  <div class="responsive chat__wrapper">
+    <CometChatUI></CometChatUI>
   </div>
   <aside class="chat__sidebar">
     <ul class="chat__icons">
