installing angular UI-kit

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div class="chat">
   <div class="responsive chat__wrapper">
-    <CometChatUI></CometChatUI>
+    <!-- <CometChatUserList></CometChatUserList> -->
   </div>
   <aside class="chat__sidebar">
     <ul class="chat__icons">
