adds theming ability

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class="chat">
+<div class="chat" [style]="theme">
   <div class="responsive chat__wrapper">
     <CometChatUI></CometChatUI>
   </div>
