observes error with importing a different module

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,6 +1,7 @@
 <div class="chat" [style]="theme">
   <div class="responsive chat__wrapper">
     <CometChatUI></CometChatUI>
+    <!-- <CometChatUserListWithMessages></CometChatUserListWithMessages> -->
   </div>
   <aside class="chat__sidebar">
     <ul class="chat__icons">
