--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,6 @@
 <div class="chat" [style]="theme">
   <div class="responsive chat__wrapper">
-    <CometChatUI></CometChatUI>
-    <!-- <CometChatUserListWithMessages></CometChatUserListWithMessages> -->
+    <cometchat-user-list-with-messages></cometchat-user-list-with-messages>
   </div>
   <aside class="chat__sidebar">
     <ul class="chat__icons">
